[project]
name = "pullup-calculator"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "flask-wtf>=1.2.0",
    "gunicorn>=23.0.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "plotly>=6.7.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
]
